# rust-training

Learn-Rust-by-Building-Real-Applications/: Cargo.toml  README.md
Learn-Rust-by-Building-Real-Applications/mars_calc/: README.md
Learn-Rust-by-Building-Real-Applications/mars_calc/src/: main.rs
Learn-Rust-by-Building-Real-Applications/memory_management/: README.md
Learn-Rust-by-Building-Real-Applications/memory_management/src/: main.rs
Learn-Rust-by-Building-Real-Applications/server/: README.md
Learn-Rust-by-Building-Real-Applications/server2/: Cargo.toml  README.md
Learn-Rust-by-Building-Real-Applications/server2/public/: hello.html  index.html
Learn-Rust-by-Building-Real-Applications/server2/src/: main.rs  server.rs  (+1 more)
ap-mobbing-session/: hello  hello_world2  hello_world2.rs
ap-mobbing-session/hello_world/: Cargo.toml
ap-mobbing-session/hello_world3/: Cargo.toml
ap-mobbing-session/hello_world4/: Cargo.toml
ap-mobbing-session/image_resize/: Cargo.toml
grpc/checkbox-resize/: Cargo.toml
grpc/demo-resize/: Cargo.toml  build.rs
grpc/demo-resize/proto/: resize.proto
grpc/demo-resize/src/: server.rs
grpc/rust-grpc-demo/: Cargo.toml  build.rs  walle.data  walle.data.bad
ultimate-rust-crash-course/: 04_variables.rs  05_scope.rs  06_memory_safety.rs  Makefile
ultimate-rust-crash-course/07_a_exercise/: Cargo.toml
ultimate-rust-crash-course/08_b_exercise/: Cargo.toml
ultimate-rust-crash-course/09_b_exercise/: Cargo.toml
ultimate-rust-crash-course/10_c_exercise/: Cargo.toml
ultimate-rust-crash-course/test_lib/: Cargo.toml
(+25 files in other folders)
