[package]
name = "demo-resize"
version = "0.1.0"
authors = ["小叶子 <yezeyu@petalmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.6.1"
tonic = {version="0.2.0",features = ["tls"]}
tokio = {version="0.2.18",features = ["stream", "macros"]}
futures = "0.3"
image = "0.23.14"
sha2 = "0.10"
lru = "0.7.1"

[build-dependencies]
tonic-build = "0.2.0"

[[bin]]
name = "server"
path = "src/server.rs"
